--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -35,27 +35,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>normalized-losses</th>\n",
+       "      <th>make</th>\n",
+       "      <th>fuel-type</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>num-of-doors</th>\n",
+       "      <th>body-style</th>\n",
+       "      <th>drive-wheels</th>\n",
+       "      <th>engine-location</th>\n",
+       "      <th>wheel-base</th>\n",
        "      <th>...</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
+       "      <th>engine-size</th>\n",
+       "      <th>fuel-system</th>\n",
+       "      <th>bore</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compression-ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak-rpm</th>\n",
+       "      <th>city-mpg</th>\n",
+       "      <th>highway-mpg</th>\n",
+       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -185,24 +185,38 @@
        "</div>"
       ],
       "text/plain": [
-       "   0    1            2    3    4     5            6    7      8     9   ...  \\\n",
-       "0   3    ?  alfa-romero  gas  std   two  convertible  rwd  front  88.6  ...   \n",
-       "1   3    ?  alfa-romero  gas  std   two  convertible  rwd  front  88.6  ...   \n",
-       "2   1    ?  alfa-romero  gas  std   two    hatchback  rwd  front  94.5  ...   \n",
-       "3   2  164         audi  gas  std  four        sedan  fwd  front  99.8  ...   \n",
-       "4   2  164         audi  gas  std  four        sedan  4wd  front  99.4  ...   \n",
+       "   symboling normalized-losses         make fuel-type aspiration num-of-doors  \\\n",
+       "0          3                 ?  alfa-romero       gas        std          two   \n",
+       "1          3                 ?  alfa-romero       gas        std          two   \n",
+       "2          1                 ?  alfa-romero       gas        std          two   \n",
+       "3          2               164         audi       gas        std         four   \n",
+       "4          2               164         audi       gas        std         four   \n",
        "\n",
-       "    16    17    18    19    20   21    22  23  24     25  \n",
-       "0  130  mpfi  3.47  2.68   9.0  111  5000  21  27  13495  \n",
-       "1  130  mpfi  3.47  2.68   9.0  111  5000  21  27  16500  \n",
-       "2  152  mpfi  2.68  3.47   9.0  154  5000  19  26  16500  \n",
-       "3  109  mpfi  3.19  3.40  10.0  102  5500  24  30  13950  \n",
-       "4  136  mpfi  3.19  3.40   8.0  115  5500  18  22  17450  \n",
+       "    body-style drive-wheels engine-location  wheel-base  ...  engine-size  \\\n",
+       "0  convertible          rwd           front        88.6  ...          130   \n",
+       "1  convertible          rwd           front        88.6  ...          130   \n",
+       "2    hatchback          rwd           front        94.5  ...          152   \n",
+       "3        sedan          fwd           front        99.8  ...          109   \n",
+       "4        sedan          4wd           front        99.4  ...          136   \n",
+       "\n",
+       "   fuel-system  bore  stroke compression-ratio horsepower  peak-rpm city-mpg  \\\n",
+       "0         mpfi  3.47    2.68               9.0        111      5000       21   \n",
+       "1         mpfi  3.47    2.68               9.0        111      5000       21   \n",
+       "2         mpfi  2.68    3.47               9.0        154      5000       19   \n",
+       "3         mpfi  3.19    3.40              10.0        102      5500       24   \n",
+       "4         mpfi  3.19    3.40               8.0        115      5500       18   \n",
+       "\n",
+       "  highway-mpg  price  \n",
+       "0          27  13495  \n",
+       "1          27  16500  \n",
+       "2          26  16500  \n",
+       "3          30  13950  \n",
+       "4          22  17450  \n",
        "\n",
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +225,10 @@
     "file_url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data\"\n",
     "df = pd.read_csv(file_url, header = None)\n",
     "#define headers\n",
-    "headers = [\"symboling\", \"normalized-losses\", \"fuel-typeD\", \"aspiration\", \"num-of-doors\", ]\n",
+    "headers = [\"symboling\", \"normalized-losses\", \"make\", \"fuel-type\", \"aspiration\", \"num-of-doors\", \"body-style\", \"drive-wheels\", \"engine-location\", \"wheel-base\", \"length\", \"width\", \"height\", \"curb-weight\", \"engine-type\", \"num-of-cylinders\", \"engine-size\", \"fuel-system\", \"bore\", \"stroke\", \"compression-ratio\", \"horsepower\", \"peak-rpm\", \"city-mpg\", \"highway-mpg\", \"price\"]\n",
+    "\n",
+    "#assigning headers\n",
+    "df.columns = headers\n",
     "df.head()"
    ]
   }
