Saving dataset as csv

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -216,20 +216,56 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data\"\n",
-    "df = pd.read_csv(file_url, header = None)\n",
-    "#define headers\n",
-    "headers = [\"symboling\", \"normalized-losses\", \"make\", \"fuel-type\", \"aspiration\", \"num-of-doors\", \"body-style\", \"drive-wheels\", \"engine-location\", \"wheel-base\", \"length\", \"width\", \"height\", \"curb-weight\", \"engine-type\", \"num-of-cylinders\", \"engine-size\", \"fuel-system\", \"bore\", \"stroke\", \"compression-ratio\", \"horsepower\", \"peak-rpm\", \"city-mpg\", \"highway-mpg\", \"price\"]\n",
+    "file_url = (\n",
+    "    \"https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data\"\n",
+    ")\n",
+    "df = pd.read_csv(file_url, header=None)\n",
     "\n",
-    "#assigning headers\n",
+    "path = \"C:\\\\Users\\\\Solomon\\\\Desktop\\\\IBM Data Analyst Course\\\\car_dataset.csv\"\n",
+    "\n",
+    "# define headers\n",
+    "headers = [\n",
+    "    \"symboling\",\n",
+    "    \"normalized-losses\",\n",
+    "    \"make\",\n",
+    "    \"fuel-type\",\n",
+    "    \"aspiration\",\n",
+    "    \"num-of-doors\",\n",
+    "    \"body-style\",\n",
+    "    \"drive-wheels\",\n",
+    "    \"engine-location\",\n",
+    "    \"wheel-base\",\n",
+    "    \"length\",\n",
+    "    \"width\",\n",
+    "    \"height\",\n",
+    "    \"curb-weight\",\n",
+    "    \"engine-type\",\n",
+    "    \"num-of-cylinders\",\n",
+    "    \"engine-size\",\n",
+    "    \"fuel-system\",\n",
+    "    \"bore\",\n",
+    "    \"stroke\",\n",
+    "    \"compression-ratio\",\n",
+    "    \"horsepower\",\n",
+    "    \"peak-rpm\",\n",
+    "    \"city-mpg\",\n",
+    "    \"highway-mpg\",\n",
+    "    \"price\",\n",
+    "]\n",
+    "\n",
+    "# assigning headers\n",
     "df.columns = headers\n",
-    "df.head()"
+    "\n",
+    "# save dataset as csv\n",
+    "df.to_csv(path)\n",
+    "\n",
+    "df.head()\n"
    ]
   }
  ],
