--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,6 +1208,340 @@
     "#free resources\n",
     "cursor.close()\n",
     "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Wrangling and Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    symboling normalized-losses         make fuel-type aspiration  \\\n",
+      "0           3                 ?  alfa-romero       gas        std   \n",
+      "1           3                 ?  alfa-romero       gas        std   \n",
+      "2           1                 ?  alfa-romero       gas        std   \n",
+      "3           2               164         audi       gas        std   \n",
+      "4           2               164         audi       gas        std   \n",
+      "5           2                 ?         audi       gas        std   \n",
+      "6           1               158         audi       gas        std   \n",
+      "7           1                 ?         audi       gas        std   \n",
+      "8           1               158         audi       gas      turbo   \n",
+      "9           0                 ?         audi       gas      turbo   \n",
+      "10          2               192          bmw       gas        std   \n",
+      "11          0               192          bmw       gas        std   \n",
+      "12          0               188          bmw       gas        std   \n",
+      "13          0               188          bmw       gas        std   \n",
+      "14          1                 ?          bmw       gas        std   \n",
+      "15          0                 ?          bmw       gas        std   \n",
+      "16          0                 ?          bmw       gas        std   \n",
+      "17          0                 ?          bmw       gas        std   \n",
+      "18          2               121    chevrolet       gas        std   \n",
+      "19          1                98    chevrolet       gas        std   \n",
+      "20          0                81    chevrolet       gas        std   \n",
+      "21          1               118        dodge       gas        std   \n",
+      "22          1               118        dodge       gas        std   \n",
+      "23          1               118        dodge       gas      turbo   \n",
+      "24          1               148        dodge       gas        std   \n",
+      "25          1               148        dodge       gas        std   \n",
+      "26          1               148        dodge       gas        std   \n",
+      "27          1               148        dodge       gas      turbo   \n",
+      "28         -1               110        dodge       gas        std   \n",
+      "29          3               145        dodge       gas      turbo   \n",
+      "\n",
+      "   num-of-doors   body-style drive-wheels engine-location  wheel-base  ...  \\\n",
+      "0           two  convertible          rwd           front        88.6  ...   \n",
+      "1           two  convertible          rwd           front        88.6  ...   \n",
+      "2           two    hatchback          rwd           front        94.5  ...   \n",
+      "3          four        sedan          fwd           front        99.8  ...   \n",
+      "4          four        sedan          4wd           front        99.4  ...   \n",
+      "5           two        sedan          fwd           front        99.8  ...   \n",
+      "6          four        sedan          fwd           front       105.8  ...   \n",
+      "7          four        wagon          fwd           front       105.8  ...   \n",
+      "8          four        sedan          fwd           front       105.8  ...   \n",
+      "9           two    hatchback          4wd           front        99.5  ...   \n",
+      "10          two        sedan          rwd           front       101.2  ...   \n",
+      "11         four        sedan          rwd           front       101.2  ...   \n",
+      "12          two        sedan          rwd           front       101.2  ...   \n",
+      "13         four        sedan          rwd           front       101.2  ...   \n",
+      "14         four        sedan          rwd           front       103.5  ...   \n",
+      "15         four        sedan          rwd           front       103.5  ...   \n",
+      "16          two        sedan          rwd           front       103.5  ...   \n",
+      "17         four        sedan          rwd           front       110.0  ...   \n",
+      "18          two    hatchback          fwd           front        88.4  ...   \n",
+      "19          two    hatchback          fwd           front        94.5  ...   \n",
+      "20         four        sedan          fwd           front        94.5  ...   \n",
+      "21          two    hatchback          fwd           front        93.7  ...   \n",
+      "22          two    hatchback          fwd           front        93.7  ...   \n",
+      "23          two    hatchback          fwd           front        93.7  ...   \n",
+      "24         four    hatchback          fwd           front        93.7  ...   \n",
+      "25         four        sedan          fwd           front        93.7  ...   \n",
+      "26         four        sedan          fwd           front        93.7  ...   \n",
+      "27            ?        sedan          fwd           front        93.7  ...   \n",
+      "28         four        wagon          fwd           front       103.3  ...   \n",
+      "29          two    hatchback          fwd           front        95.9  ...   \n",
+      "\n",
+      "    engine-size  fuel-system  bore  stroke compression-ratio horsepower  \\\n",
+      "0           130         mpfi  3.47    2.68              9.00        111   \n",
+      "1           130         mpfi  3.47    2.68              9.00        111   \n",
+      "2           152         mpfi  2.68    3.47              9.00        154   \n",
+      "3           109         mpfi  3.19    3.40             10.00        102   \n",
+      "4           136         mpfi  3.19    3.40              8.00        115   \n",
+      "5           136         mpfi  3.19    3.40              8.50        110   \n",
+      "6           136         mpfi  3.19    3.40              8.50        110   \n",
+      "7           136         mpfi  3.19    3.40              8.50        110   \n",
+      "8           131         mpfi  3.13    3.40              8.30        140   \n",
+      "9           131         mpfi  3.13    3.40              7.00        160   \n",
+      "10          108         mpfi  3.50    2.80              8.80        101   \n",
+      "11          108         mpfi  3.50    2.80              8.80        101   \n",
+      "12          164         mpfi  3.31    3.19              9.00        121   \n",
+      "13          164         mpfi  3.31    3.19              9.00        121   \n",
+      "14          164         mpfi  3.31    3.19              9.00        121   \n",
+      "15          209         mpfi  3.62    3.39              8.00        182   \n",
+      "16          209         mpfi  3.62    3.39              8.00        182   \n",
+      "17          209         mpfi  3.62    3.39              8.00        182   \n",
+      "18           61         2bbl  2.91    3.03              9.50         48   \n",
+      "19           90         2bbl  3.03    3.11              9.60         70   \n",
+      "20           90         2bbl  3.03    3.11              9.60         70   \n",
+      "21           90         2bbl  2.97    3.23              9.41         68   \n",
+      "22           90         2bbl  2.97    3.23              9.40         68   \n",
+      "23           98         mpfi  3.03    3.39              7.60        102   \n",
+      "24           90         2bbl  2.97    3.23              9.40         68   \n",
+      "25           90         2bbl  2.97    3.23              9.40         68   \n",
+      "26           90         2bbl  2.97    3.23              9.40         68   \n",
+      "27           98         mpfi  3.03    3.39              7.60        102   \n",
+      "28          122         2bbl  3.34    3.46              8.50         88   \n",
+      "29          156          mfi  3.60    3.90              7.00        145   \n",
+      "\n",
+      "    peak-rpm city-mpg highway-mpg  price  \n",
+      "0       5000       21          27  13495  \n",
+      "1       5000       21          27  16500  \n",
+      "2       5000       19          26  16500  \n",
+      "3       5500       24          30  13950  \n",
+      "4       5500       18          22  17450  \n",
+      "5       5500       19          25  15250  \n",
+      "6       5500       19          25  17710  \n",
+      "7       5500       19          25  18920  \n",
+      "8       5500       17          20  23875  \n",
+      "9       5500       16          22      ?  \n",
+      "10      5800       23          29  16430  \n",
+      "11      5800       23          29  16925  \n",
+      "12      4250       21          28  20970  \n",
+      "13      4250       21          28  21105  \n",
+      "14      4250       20          25  24565  \n",
+      "15      5400       16          22  30760  \n",
+      "16      5400       16          22  41315  \n",
+      "17      5400       15          20  36880  \n",
+      "18      5100       47          53   5151  \n",
+      "19      5400       38          43   6295  \n",
+      "20      5400       38          43   6575  \n",
+      "21      5500       37          41   5572  \n",
+      "22      5500       31          38   6377  \n",
+      "23      5500       24          30   7957  \n",
+      "24      5500       31          38   6229  \n",
+      "25      5500       31          38   6692  \n",
+      "26      5500       31          38   7609  \n",
+      "27      5500       24          30   8558  \n",
+      "28      5000       24          30   8921  \n",
+      "29      5000       19          24  12964  \n",
+      "\n",
+      "[30 rows x 26 columns]\n",
+      "        symboling  wheel-base      length       width      height  \\\n",
+      "count  205.000000  205.000000  205.000000  205.000000  205.000000   \n",
+      "mean     0.834146   98.756585  174.049268   65.907805   53.724878   \n",
+      "std      1.245307    6.021776   12.337289    2.145204    2.443522   \n",
+      "min     -2.000000   86.600000  141.100000   60.300000   47.800000   \n",
+      "25%      0.000000   94.500000  166.300000   64.100000   52.000000   \n",
+      "50%      1.000000   97.000000  173.200000   65.500000   54.100000   \n",
+      "75%      2.000000  102.400000  183.100000   66.900000   55.500000   \n",
+      "max      3.000000  120.900000  208.100000   72.300000   59.800000   \n",
+      "\n",
+      "       curb-weight  engine-size  compression-ratio    city-mpg  highway-mpg  \n",
+      "count   205.000000   205.000000         205.000000  205.000000   205.000000  \n",
+      "mean   2555.565854   126.907317          10.142537   25.219512    30.751220  \n",
+      "std     520.680204    41.642693           3.972040    6.542142     6.886443  \n",
+      "min    1488.000000    61.000000           7.000000   13.000000    16.000000  \n",
+      "25%    2145.000000    97.000000           8.600000   19.000000    25.000000  \n",
+      "50%    2414.000000   120.000000           9.000000   24.000000    30.000000  \n",
+      "75%    2935.000000   141.000000           9.400000   30.000000    34.000000  \n",
+      "max    4066.000000   326.000000          23.000000   49.000000    54.000000  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "symboling              int64\n",
+       "normalized-losses     object\n",
+       "make                  object\n",
+       "fuel-type             object\n",
+       "aspiration            object\n",
+       "num-of-doors          object\n",
+       "body-style            object\n",
+       "drive-wheels          object\n",
+       "engine-location       object\n",
+       "wheel-base           float64\n",
+       "length               float64\n",
+       "width                float64\n",
+       "height               float64\n",
+       "curb-weight            int64\n",
+       "engine-type           object\n",
+       "num-of-cylinders      object\n",
+       "engine-size            int64\n",
+       "fuel-system           object\n",
+       "bore                  object\n",
+       "stroke                object\n",
+       "compression-ratio    float64\n",
+       "horsepower            object\n",
+       "peak-rpm              object\n",
+       "city-mpg               int64\n",
+       "highway-mpg            int64\n",
+       "price                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_url2 = (\n",
+    "    \"https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data\"\n",
+    ")\n",
+    "df2 = pd.read_csv(file_url2, header=None)\n",
+    "\n",
+    "path = \"C:\\\\Users\\\\Solomon\\\\Desktop\\\\IBM Data Analyst Course\\\\car_dataset.csv\"\n",
+    "\n",
+    "# define headers\n",
+    "headers = [\n",
+    "    \"symboling\",\n",
+    "    \"normalized-losses\",\n",
+    "    \"make\",\n",
+    "    \"fuel-type\",\n",
+    "    \"aspiration\",\n",
+    "    \"num-of-doors\",\n",
+    "    \"body-style\",\n",
+    "    \"drive-wheels\",\n",
+    "    \"engine-location\",\n",
+    "    \"wheel-base\",\n",
+    "    \"length\",\n",
+    "    \"width\",\n",
+    "    \"height\",\n",
+    "    \"curb-weight\",\n",
+    "    \"engine-type\",\n",
+    "    \"num-of-cylinders\",\n",
+    "    \"engine-size\",\n",
+    "    \"fuel-system\",\n",
+    "    \"bore\",\n",
+    "    \"stroke\",\n",
+    "    \"compression-ratio\",\n",
+    "    \"horsepower\",\n",
+    "    \"peak-rpm\",\n",
+    "    \"city-mpg\",\n",
+    "    \"highway-mpg\",\n",
+    "    \"price\",\n",
+    "]\n",
+    "\n",
+    "# assigning headers\n",
+    "df2.columns = headers\n",
+    "\n",
+    "# save dataset as csv\n",
+    "df2.to_csv(path)\n",
+    "\n",
+    "print(df2.head(30))\n",
+    "\n",
+    "print(df2.describe())\n",
+    "\n",
+    "df2.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "symboling              int64\n",
+       "normalized-losses      int64\n",
+       "make                  object\n",
+       "fuel-type             object\n",
+       "aspiration            object\n",
+       "num-of-doors          object\n",
+       "body-style            object\n",
+       "drive-wheels          object\n",
+       "engine-location       object\n",
+       "wheel-base           float64\n",
+       "length               float64\n",
+       "width                float64\n",
+       "height               float64\n",
+       "curb-weight            int64\n",
+       "engine-type           object\n",
+       "num-of-cylinders      object\n",
+       "engine-size            int64\n",
+       "fuel-system           object\n",
+       "bore                  object\n",
+       "stroke                object\n",
+       "compression-ratio    float64\n",
+       "horsepower            object\n",
+       "peak-rpm              object\n",
+       "city-mpg               int64\n",
+       "highway-mpg            int64\n",
+       "price                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df2.replace(\"?\", np.NaN)\n",
+    "df2.head(20)\n",
+    "\n",
+    "\n",
+    "df2 = df2.dropna(subset=[\"normalized-losses\"], axis=0)\n",
+    "df2.head(20)\n",
+    "\n",
+    "\n",
+    "# calculate mean for normalized losses\n",
+    "df2.dtypes\n",
+    "df2.columns\n",
+    "\n",
+    "df2[\"normalized-losses\"] = df2[\"normalized-losses\"].astype(np.int64)\n",
+    "\n",
+    "# df3.dtypes\n",
+    "df2.columns\n",
+    "df2.dtypes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "122.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = df2[\"normalized-losses\"].mean()\n",
+    "print(mean)\n"
    ]
   }
  ],
