Handling missing data

--- a/index.ipynb
+++ b/index.ipynb
@@ -1507,10 +1507,11 @@
     }
    ],
    "source": [
+    "#replace missing values with NaN\n",
     "df2 = df2.replace(\"?\", np.NaN)\n",
     "df2.head(20)\n",
     "\n",
-    "\n",
+    "#drop NaN rows and values\n",
     "df2 = df2.dropna(subset=[\"normalized-losses\"], axis=0)\n",
     "df2.head(20)\n",
     "\n",
