--- a/index.ipynb
+++ b/index.ipynb
@@ -1507,11 +1507,11 @@
     }
    ],
    "source": [
-    "#replace missing values with NaN\n",
+    "# replace missing values with NaN\n",
     "df2 = df2.replace(\"?\", np.NaN)\n",
     "df2.head(20)\n",
     "\n",
-    "#drop NaN rows and values\n",
+    "# drop NaN rows and values\n",
     "df2 = df2.dropna(subset=[\"normalized-losses\"], axis=0)\n",
     "df2.head(20)\n",
     "\n",
@@ -1520,6 +1520,7 @@
     "df2.dtypes\n",
     "df2.columns\n",
     "\n",
+    "# convert datatype for the selected column \n",
     "df2[\"normalized-losses\"] = df2[\"normalized-losses\"].astype(np.int64)\n",
     "\n",
     "# df3.dtypes\n",
