Calculate the mean and populate the dataset

--- a/index.ipynb
+++ b/index.ipynb
@@ -1542,6 +1542,7 @@
     }
    ],
    "source": [
+    "#calculate the mean for the column \n",
     "mean = df2[\"normalized-losses\"].mean()\n",
     "print(mean)\n"
    ]
