Model Development- Module 4

--- a/index.ipynb
+++ b/index.ipynb
@@ -1546,6 +1546,29 @@
     "mean = df2[\"normalized-losses\"].mean()\n",
     "print(mean)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Wrangling \n",
+    "handling missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_url = (\n",
+    "    \"https://archive.ics.uci.edu/ml/machine-learning-databases/autos/imports-85.data\"\n",
+    ")\n",
+    "df = pd.read_csv(file_url, header=None)\n",
+    "\n",
+    "path = \"C:\\\\Users\\\\Solomon\\\\Desktop\\\\IBM Data Analyst Course\\\\car_dataset.csv\"\n",
+    "# "
+   ]
   }
  ],
  "metadata": {
